RESOLVED FIXED124164
REGRESSION (r158927): curly-braces-escaping.html is broken on Mac WebKit2
https://bugs.webkit.org/show_bug.cgi?id=124164
Summary REGRESSION (r158927): curly-braces-escaping.html is broken on Mac WebKit2
Alexey Proskuryakov
Reported 2013-11-11 13:17:44 PST
-PASS req.responseText is '/uri/resources/echo-uri.php?q={}' +FAIL req.responseText should be /uri/resources/echo-uri.php?q={}. Was /uri/resources/echo-uri.php?q=%7B%7D. This is pretty bad - check svn log if interested in the rationale for the test. Please also see bugs related to <rdar://problem/12965959> in Radar. http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=http%2Ftests%2Furi%2Fcurly-braces-escaping.html
Attachments
Patch (5.58 KB, patch)
2013-11-11 16:32 PST, Anders Carlsson
ap: review+
Alexey Proskuryakov
Comment 1 2013-11-11 13:26:48 PST
The same change broke http/tests/security/xssAuditor/script-tag-with-16bit-unicode4.html, I think.
Anders Carlsson
Comment 2 2013-11-11 16:32:25 PST
Anders Carlsson
Comment 3 2013-11-11 17:06:48 PST
Note You need to log in before you can comment on or make changes to this bug.